make events datetime (#94)
